Stylisations avec le préprocesseur scss de la page index.html et dashboard.html tout en le rendant responsive avec le javascript

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -9,14 +9,28 @@
 <body>
    <!-- En tete -->
    <header id="header">
+    <!-- Navbar destock -->
     <nav class="navbar-destock">
+        <!-- Logo -->
         <h1 class="logo">InFreelance</h1>
+        <!-- Liste de lien pour destock -->
+        <ul class="liste-lien-destock">
+            <li><a href="../index.html">Accueil</a></li>
+            <li><a href="/admin/dashboard.html">Tableau de Bord</a></li>
+        </ul>
+        <!-- Navbar mobile -->
+        <div class="navbar-mobile">
+            <button class="burger-icon" id="burger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <!-- Liste des liens pour petits appareils -->
+            <ul class="liste-lien-mobile" id="mobile-menu">
+                <li><a href="../index.html">Accueil</a></li>
+                <li><a href="/admin/dashboard.html">Tableau de Bord</a></li>
+            </ul>
     </nav>
-    <!-- Liste de lien -->
-    <ul class="liste-lien">
-        <li><a href="../index.html">Accueil</a></li>
-        <li><a href="/dashboard.html">Tableau de Bord</a></li>
-    </ul>
 </header>
 
     <h1>Tableau de Bord Freelance</h1>
