--- a/dashboard-freelance.html
+++ b/dashboard-freelance.html
@@ -16,7 +16,8 @@
         <!-- Liste de lien pour destock -->
         <ul class="liste-lien-destock">
             <li><a href="../index.html">Accueil</a></li>
-            <li><a href="/admin/dashboard.html">Tableau de Bord</a></li>
+            <li><a href="/dashboard-freelance.html">Tableau de Bord F</a></li>
+            <li><a href="/admin/dashboard-admin.html">Tableau de Bord A</a></li>
         </ul>
         <!-- Navbar mobile -->
         <div class="navbar-mobile">
@@ -28,20 +29,34 @@
             <!-- Liste des liens pour petits appareils -->
             <ul class="liste-lien-mobile" id="mobile-menu">
                 <li><a href="../index.html">Accueil</a></li>
-                <li><a href="/admin/dashboard.html">Tableau de Bord</a></li>
+                <li><a href="/admin/dashboard-freelance.html">Tableau de Bord F</a></li>
+                <li><a href="/admin/dashboard-admin.html">Tableau de Bord A</a></li>
             </ul>
     </nav>
 </header>
 
-    <h1>Tableau de Bord Freelance</h1>
-    
-    <main>
-        <section id="dashboard">
-            <h2>Vos Candidatures</h2>
-            <ul id="candidatures-list"></ul>
-        </section>
-    </main>
-    
-    <script src="../assets/js/script.js"></script>
+<h1>Tableau de Bord Freelance</h1>
+
+<main>
+    <section id="dashboard">
+        <h2>Vos Candidatures</h2>
+        <table id="candidature-table">
+            <thead>
+                <tr>
+                    <th>Nom</th>
+                    <th>Email</th>
+                    <th>Mission</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Les candidatures seront affichées ici -->
+            </tbody>
+        </table>
+    </section>
+</main>
+
+<script src="../assets/js/script.js"></script>
+<script src="/assets/js/candidatureList.js"></script>
 </body>
 </html>
