--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <!-- Liste de liens pour destock -->
         <ul class="liste-lien-destock">
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="/admin/dashboard.html">Tableau de Bord</a></li>
+            <li><a href="/admin/dashboard-freelance.html">Tableau de Bord F</a></li>
+            <li><a href="/admin/dashboard-admin.html">Tableau de Bord A</a></li>
         </ul>
         <!-- Navbar mobile -->
         <div class="navbar-mobile">
@@ -30,7 +31,8 @@
             <!-- Liste des liens pour petits appareils -->
             <ul class="liste-lien-mobile" id="mobile-menu">
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="/admin/dashboard.html">Tableau de Bord</a></li>
+                <li><a href="/admin/dashboard-freelance.html">Tableau de Bord</a></li>
+                <li><a href="/admin/dashboard-admin.html">Tableau de Bord</a></li>
             </ul>
         </div> 
     </nav> 
@@ -42,26 +44,36 @@
         <!-- Section des missions disponibles -->
         <section id="missions">
             <h2>Missions disponibles</h2>
-            <div id="missions-list"></div>
+            <ul class="mission-list">
+                <!-- Les missions seront ajoutées ici dynamiquement -->
+            </ul>
         </section>
         <!-- Section pour postuler -->
-        <section id="postuler">
-            <h2>Postuler</h2>
-            <form id="candidature-form">
-                <label for="nom">Nom :</label>
-                <input type="text" id="nom" placeholder="Votre nom" required>
+      
+    <!-- Section pour postuler -->
+    <section id="postuler">
+        <h2>Postuler</h2>
+        <form id="candidature-form">
+            <label for="nom">Nom :</label>
+            <input type="text" id="nom" placeholder="Votre nom" required>
 
-                <label for="email">Email :</label>
-                <input type="email" id="email" placeholder="Votre email" required>
+            <label for="email">Email :</label>
+            <input type="email" id="email" placeholder="Votre email" required>
 
-                <label for="mission-select">Choisissez une mission :</label>
-                <select id="mission-select" required></select>
+            <label for="mission-select">Choisissez une mission :</label>
+            <select id="mission-select" required>
+                <!-- Les missions seront insérées ici dynamiquement -->
+            </select>
 
-                <button type="submit">Postuler</button>
-            </form>
-        </section>
+            <button type="submit">Postuler</button>
+        </form>
+    </section>
+
     </main>
     <script src="/assets/js/script.js"></script>
+    <script src="/assets/js/route.js"></script>
+    <script src="/assets/js/newCandidature.js"></script>
+    <script src="/assets/js/newMission.js"></script>
 </body>
 
 </html>
