Rectification avant le rendu du TP

--- a/admin/dashboard-admin.html
+++ b/admin/dashboard-admin.html
@@ -41,11 +41,6 @@
 
     <section id="add-mission">
         <h2>Ajouter une mission</h2>
-
-        <ul class="mission-list">
-            <!-- Les missions seront ajoutées ici dynamiquement -->
-        </ul>
-
         <!-- Formulaire d'ajout de mission -->
         <form id="candidatures-list">
             <label for="titre">Titre de la mission :</label>
@@ -64,8 +59,8 @@
         </form>
     </section>
     <!-- Link des js pour les fonctionnalités -->
-    <script src="../assets/js/script.js"></script>
-    <script src="../assets/js/newMisson.js"></script>
+    <script src="/assets/js/script.js"></script>
+    <script src="/assets/js/newMisson.js"></script>
 
 </body>
 
