--- a/dashboard-freelance.html
+++ b/dashboard-freelance.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link du css pour le design -->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Tableau de Bord</title>
 </head>
 
@@ -59,7 +59,7 @@
         </section>
     </main>
     <!-- Link des js pour les fonctionnalités -->
-    <script src="../assets/js/script.js"></script>
+    <script src="/assets/js/script.js"></script>
     <script src="/assets/js/candidatureList.js"></script>
 </body>
 
